@@ -1,3 +1,5 @@
+ - Rename NewtonSolver::get_iteration() to NewtonSolver::iteration()
+ - Improvements to EpetraKrylovSolver::solve
  - Add constructor Vector::Vector(const GenericVector& x)
  - Remove SCons deprecation warnings
  - Memory leak fix in PETScKrylovSolver
